spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -156,6 +156,7 @@ table .emphasis {
   background-color: #202020;
   border-radius: 15px;
   padding: 2px;
+  margin-left: 20px;
 }
 
 .interactive-table table,
